--- a/QuickBug/app/src/main/AndroidManifest.xml
+++ b/QuickBug/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.quickbug">
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,24 +15,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true"
         android:theme="@style/Theme.QuickBug">
         <activity android:name=".qrCheck"/>
+        <activity android:name=".popupActivity" android:theme="@android:style/Theme.Dialog"/>
         <uses-library
             android:name="com.google.android.maps"
             android:required="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation"/>
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="wf96v6nadc" />
+        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation"/>
     </application>
+
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
