--- a/QuickBug/app/build.gradle
+++ b/QuickBug/app/build.gradle
@@ -30,17 +30,18 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-database:20.0.0'
-    compile 'com.google.firebase:firebase-core:10.2.1'
-    compile 'com.google.firebase:firebase-analytics:15.0.0'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.naver.maps:map-sdk:3.11.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.naver.maps:map-sdk:3.11.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-core:10.2.1'
+    implementation 'com.google.firebase:firebase-analytics:15.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
